Tarea Unidad 2 CSS (parte 2)

--- a/Modulo 2 CSS y maquetado avanzado/U2 CSS (parte 2)/bloque3.html
+++ b/Modulo 2 CSS y maquetado avanzado/U2 CSS (parte 2)/bloque3.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M2 Unidad 2</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <title>Document</title>
 </head>
-
 <body>
     <h1>Hacer clic en cada cuadro de color para cambiar el estilo</h1>
-    <div id="bloque" class="container-uno">
+    <div id="bloque" class="container-tres">
         <a href="index.html"><div class="cajas" id="caja1">1</div></a> 
         <a href="bloque2.html"><div class="cajas" id="caja2">2</div></a> 
         <a href="bloque3.html"><div class="cajas" id="caja3">3</div></a> 
     </div>
-
 </body>
-
 </html>
