se arreglo ruta de recetas1.jpeg

--- a/Modulo 3 Javascript y maquetado avanzado/U1 Maquetado de un sitio Web/index.html
+++ b/Modulo 3 Javascript y maquetado avanzado/U1 Maquetado de un sitio Web/index.html
@@ -36,7 +36,7 @@
     <!--------------------- PRINCIPAL --------------------->
     <main>
         <div class="holder">
-            <img src="/img/recetas1.jpeg" width="95%" height="400" alt="">
+            <img src="img/recetas1.jpeg" width="95%" height="400" alt="">
             <h2>Bienvenidos</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id fugit atque facere tempora magni doloremque accusantium aperiam. Harum eveniet consequatur autem, praesentium similique, libero inventore excepturi voluptatem error numquam alias voluptatum, et laboriosam cupiditate deleniti odit quisquam mollitia ullam quas. Fugiat eaque blanditiis architecto ipsum illum inventore numquam, aperiam alias.</p>            
         </div>
