--- a/Modulo 3 Javascript y maquetado avanzado/U1 Maquetando sitio Web/index.html
+++ b/Modulo 3 Javascript y maquetado avanzado/U1 Maquetando sitio Web/index.html
@@ -26,7 +26,7 @@
                 <li><a class="activo" href="index.html">Home</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="#">Recetas</a></li>
-                <li><a href="#">Cenas</a></li>
+                <li><a href="#">Galeria</a></li>
                 <li><a href="#">Novedades</a></li>
                 <li><a href="#">Contacto</a></li> 
             </ul>
